--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -4,8 +4,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <meta name="description" content="Techium is a digital agency">
         <title>Homepage - Techium</title>
-        <a rel="icon", type="image/x-icon", href="image/favicon.ico"></a>
-        <a rel="icon", type="image/png", href="image/favicon.png"></a>
+        <link rel="icon" type="image/x-icon" href="image/favicon.ico">
+        <link rel="icon" type="image/png" href="image/favicon.png">
 
     </head>
     <body>
