--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-        <meta name="description" content="Techium is a digital agency">
         <title>Homepage - Techium</title>
+        <meta name="description" content="Techium is a digital agency">
+    
         <link rel="icon" type="image/x-icon" href="image/favicon.ico">
         <link rel="icon" type="image/png" href="image/favicon.png">
 
