--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -6,8 +6,8 @@
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
     
-        <link rel="icon" type="image/x-icon" href="image/favicon.ico">
-        <link rel="icon" type="image/png" href="image/favicon.png">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/png" href="favicon.png">
 
     </head>
     <body>
