--- a/0x00-html_advanced/11-styleguide.html
+++ b/0x00-html_advanced/11-styleguide.html
@@ -15,13 +15,14 @@
         <header>
             
         </header>
+
         <main>
            <section>
-            <head>
+            <header>
                 <h2>
                     Headings
                 </h2>
-            </head>
+            </header>
             <h1>
                 Heading level 1
             </h1>
