--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -32,6 +32,8 @@
                         We help you build your brand!
                     </h2>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         Services
@@ -58,6 +60,8 @@
                         Social Media
                 </h3>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         Works
@@ -81,6 +85,8 @@
                         </h3>
                     </article>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         About Us
@@ -107,6 +113,8 @@
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
                     </p>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         Latest news
@@ -145,6 +153,8 @@
                         </p>
                     </article>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         Testimonials
@@ -162,6 +172,8 @@
                         Testimonial 3
                     </article>
                 </section>
+            </div>
+            <div>
                 <section>
                     <h2>
                         Contact
